log
Sat 15 Oct 2022 12:55:33 AM UTC: 
 heap.c | 30 +++++++++++++++++++++++-------
 1 file changed, 23 insertions(+), 7 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:31:15: error: implicit declaration of function ‘trunc’ [-Werror=implicit-function-declaration]
   31 |   int father= trunc(fatherD);
      |               ^~~~~
heap.c:31:15: error: incompatible implicit declaration of built-in function ‘trunc’ [-Werror]
heap.c:1:1: note: include ‘<math.h>’ or provide a declaration of ‘trunc’
  +++ |+#include <math.h>
    1 | #include <stdio.h>
cc1: all warnings being treated as errors
Compilation failed
0cea264
Sat 15 Oct 2022 12:56:02 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|2
total_score: 30/70
ec0e2c9
Sat 15 Oct 2022 12:59:56 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:42:3: error: expected ‘(’ before ‘pq’
   42 |   pq->size=pq->size+1;
      |   ^~
      |   (
Compilation failed
a51870f
Sat 15 Oct 2022 01:00:10 AM UTC: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|2
total_score: 30/70
68a6982
Sat 15 Oct 2022 01:01:55 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:42:24: error: expected ‘]’ before ‘;’ token
   42 |     aux=pq->heapArray[0;
      |                        ^
      |                        ]
heap.c:44:33: error: expected ‘;’ before ‘}’ token
   44 |     pq->heapArray[pq->size]=aux;
      |                                 ^
      |                                 ;
   45 |   }
      |   ~                              
Compilation failed
0e496c0
Sat 15 Oct 2022 01:02:15 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|2
total_score: 30/70
66b0ab5
Sat 15 Oct 2022 01:04:15 AM UTC: 
 heap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  4|2
total_score: 30/70
4f82000
Sat 15 Oct 2022 01:05:00 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
8259d2d
Sat 15 Oct 2022 01:10:40 AM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|2
total_score: 35/70
4b1ce7b
Sat 15 Oct 2022 01:11:24 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
23185c0
Sat 15 Oct 2022 01:11:46 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:31:19: error: expected identifier before ‘(’ token
   31 |     pq->capac=pq->(capac*2)+1;
      |                   ^
Compilation failed
4127676
